--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,21 @@
-.App {
+
+.root {
   text-align: center;
 }
-
-.App-logo {
+.logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
-.App-header {
+.header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
-
-.App-intro {
+.intro {
   font-size: large;
 }
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
